fix layout shift

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -252,28 +252,26 @@ NavarBar
 .nav-links {
   display: flex;
   justify-content: flex-end;
+  gap: 2rem;
 }
-.nav-links li {
-  margin-right: 2rem;
-}
-.nav-links a {
+
+.link {
   text-transform: capitalize;
   color: var(--clr-grey-1);
   font-weight: bold;
   letter-spacing: var(--spacing);
-  transition: var(--transition);
+  transition: color 0.3s, box-shadow 0.3s;
+  transition-timing-function: linear;
   padding: 0.5rem 0;
 }
+
 .active,
-.active a:active,
-.nav-links a:hover {
+.active link:active,
+.link:hover {
   color: var(--clr-primary-1);
   box-shadow: 0px 2px var(--clr-primary-1);
 }
-/* .active {
-  color: var(--clr-primary-1);
-  box-shadow: 0px 2px var(--clr-primary-1);
-} */
+
 .btn-nav {
   display: none;
   background: transparent;
@@ -328,15 +326,15 @@ NavarBar
     top: 0.5rem;
   }
 
-  .btn-nav .nav-open {
+  .nav-open {
     background-color: transparent;
   }
-  .btn-nav .nav-open::before {
+  .nav-open::before {
     top: 0;
     transform: rotate(135deg);
     background-color: var(--clr-primary-3);
   }
-  .btn-nav .nav-open::after {
+  .nav-open::after {
     top: 0;
     transform: rotate(-135deg);
     background-color: var(--clr-primary-3);
@@ -438,9 +436,6 @@ NavarBar
   }
   .hero::before {
     position: unset;
-  }
-  .hero-info {
-    margin-bottom: 8rem;
   }
 }
 
